# Fluxor

./: CMakeLists.txt
include/db/api_layer/: DatabaseInterface.h
include/db/memory_layer/: Record.h  Table.h
include/db/persistence_layer/: SnapshotPersistence.h
include/db/storage_engine/: StorageEngine.h
include/logger/: Logger.hpp
src/db/api_layer/: DatabaseInterface.cpp
src/db/memory_layer/: Record.cpp  Table.cpp
src/db/persistence_layer/: SnapshotPersistence.cpp
src/db/storage_engine/: StorageEngine.cpp
tests/gtest/: test_fluxor_db.cpp  test_snapshot_persistence.cpp
